LOG Updated to 1.23 (by updates_builder)

--- a/.abf.yml
+++ b/.abf.yml
@@ -1,2 +1,4 @@
+removed_sources:
+  libintl-perl-1.20.tar.bz2: 3fdb3977f678edd83c4c016dc209ad2c738b93d2
 sources:
-  "libintl-perl-1.20.tar.bz2": 3fdb3977f678edd83c4c016dc209ad2c738b93d2
+  libintl-perl-1.23.tar.gz: da2ed849f3b3f28dc5306a2887126a55f49992cb
